# inversion-plugin

./: .gitignore  LICENSE  README.md  TODOS  benchmark2022-05-19-13-40-24.csv  benchmark2022-05-19-13-45-41.csv  benchmark2022-05-19-13-46-02.csv  benchmark2022-05-19-13-48-08.csv  hie.yaml  inversion-ghc-plugin.cabal  inversion-plugin.cabal  lisp.pl  mps_benchmarks.md  run_benchmarks.sh  stack.yaml  todos_cph
sandbox/: LICENSE  Last.curry  benchyComp.sh  sandbox.cabal  sandbox.cabal.submission
sandbox/benchmarks/: funpat-all-last-2021-03-26-11-01-21.csv  funpat-all-last-2021-03-26-11-01-21.html
sandbox/src/: App.egi  App.hs  Arith.hs  Bench.hs  Compiler.hs  Compression.hs  Conquer.hs  DataLift.hs  Divide.hs  Eden2.hs  Example.hs  Example0.hs  FunPat.hs  FunPatSrc.hs  FunctionalPatterns.hs  Graph.hs  Graph2.hs  Huffman.hs  Interpreter.hs  Interpreter4.hs  InvertedFunctions.hs  Janus.hs  JanusP.hs  Lambda.hs  Lisp.hs  List.hs  List2.hs  Main.hs  MainSubmission.hs  Match.hs  NLPluginTest.hs  P.hs  Pack.hs  Palindrome.hs  Par.hs  ParArr.hs  ParEden.hs  ParMain.hs  ParUse.hs  PartiallyInvertedFunctions.hs  (+11 more)
sandbox/src/Eden/: Auxiliary.hs  EdenConcHs.hs  Edi.hs  Map.hs  MapReduce.hs  Merge.hs  ParPrimConcHs.hs
sandbox/src/Halde/: DataLift.hs  Egison.hs  Example.hs  Example0.hs  ExampleSubmission.hs  Halde.hs  Interpreter2.hs  Interpreter3.hs  Interpreter_old.hs  Main copy.hs  Main.hs  NonLinear.hs  RunEgison.hs  Test.hs  Test2.hs  Test_old.hs
sandbox/src/Halde/2/: Conquer copy.hs  Main copy.hs  Par copy.hs
sandbox/src/Halde/benchmarks/: Conquer.hs  Divide.hs
sandbox/src/Halde_new/: FunPat.hs  FunPatSrc.hs  GraphPrimitive.hs  Interpreter.hs  Janus copy.hs  Janus.hs  Janus2.hs  JanusInteger.hs  JanusInteger2.hs  JanusP.hs  JanusP2.hs  Match.hs  P.hs  Parser.hs  Parser2.hs  Quine.hs  Sort2.hs  Test.hs  Typechecker.hs  interpreter.py  notes_on_unification
src/: SBVTest.hs  What4Test.hs
src/Plugin/: BuiltIn.hs  Dump.hs  InversionPlugin.hs  Lifted.hs  NLPlugin.hs  Prelude.hs  Primitives.hs  TestShare.hs  mh_24072025.hs
src/Plugin/BuiltIn/: Char.hs  Identity.hs  Primitive.hs
src/Plugin/Effect/: Annotation.hs  Monad.hs  Monad.hs-boot  TH.hs  Tree.hs  Util.hs
src/Plugin/Effect/SolverLibrary/: SBV.hs  What4.hs
src/Plugin/Trans/: Class.hs  ClsInst.hs  Coerce.hs  Constr.hs  CreateSyntax.hs  DictInstFun.hs  Expr.hs  FunWiredIn.hs  Import.hs  LExprEQ.hs  Pat.hs  PatternMatching.hs  Preprocess.hs  Record.hs  Solver.hs  TyCon.hs  Type.hs  TysWiredIn.hs  Util.hs  Var.hs
test/: SemanticTests.hs  Tests.hs
test-examples/: Data.hs  Export.hs  ExportHaskell.hs  Import.hs  ImportHaskell.hs  InstanceExport.hs  InstanceImport.hs  PatternMatching.hs  Record.hs  Typeclass.hs
test/Tests/: Definitions.hs  QuickCheckInverse.hs
