cabal-version: 3.0
name:          inversion-ghc-plugin
synopsis:      A compiler plugin to provide automatic inversion
version:       1.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2020-2021, Kai-Oliver Prott, Finn Teegen
maintainer:    kai.prott@hotmail.de
author:        Kai-Oliver Prott, Finn Teegen
category:      Language
build-type:    Simple
stability:     experimental
description:   A nice plugin for the GHC that automatically derives inverse functions.

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/cau-placc/inversion-plugin

common deps
  hs-source-dirs: src
  build-depends:
    base             ^>= 4.14.0.0,
    ghc              ^>= 8.10.1,
    ghc-prim         ^>= 0.6.1,
    template-haskell ^>= 2.16.0,
    bytestring       ^>= 0.10.10.0,
    containers       ^>= 0.6.0,
    deque            ^>= 0.4.3,
    transformers     ^>= 0.5.6,
    mtl              ^>= 2.2.2,
    syb              ^>= 0.7.1,
    extra            ^>= 1.7.3,
    tree-monad       ^>= 0.3.1,
    ChasingBottoms   ^>= 1.3.1.10,
    kan-extensions   ^>= 5.2.2,
    sbv              ^>= 8.15
  ghc-options:      -Wall -Wincomplete-uni-patterns
  default-language: Haskell2010
  other-extensions:
    TupleSections,
    RecursiveDo,
    EmptyCase,
    LambdaCase,
    OverloadedStrings,
    TypeFamilies,
    RankNTypes,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeOperators,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    FunctionalDependencies,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    DeriveAnyClass,
    EmptyDataDeriving,
    StandaloneDeriving,
    DefaultSignatures,
    MultiParamTypeClasses,
    TemplateHaskell
  other-modules:
    Plugin.Dump
    Plugin.Primitives
    Plugin.Effect.TH
    Plugin.Effect.Tree
    Plugin.Effect.Util
    Plugin.Trans.Expr
    Plugin.Trans.Import
    Plugin.Trans.Constr
    Plugin.Trans.Class
    Plugin.Trans.CreateSyntax
    Plugin.Trans.ClsInst
    Plugin.Trans.TyCon
    Plugin.Trans.Record
    Plugin.Trans.DictInstFun
    Plugin.Trans.Type
    Plugin.Trans.Util
    Plugin.Trans.Var
    Plugin.Trans.Pat
    Plugin.Trans.Coerce
    Plugin.Trans.FunWiredIn
    Plugin.Trans.TysWiredIn
    Plugin.Trans.Preprocess
    Plugin.Trans.PatternMatching

library
  import: deps
  exposed-modules:
    Plugin.InversionPlugin
    Plugin.Prelude
    Plugin.BuiltIn
    Plugin.Effect.Monad
    Plugin.Effect.Annotation

test-suite tests
  import:         deps
  type:           detailed-0.9
  hs-source-dirs: test
  test-module:    Tests
  other-modules:
    SemanticTests
    Tests.Definitions
    Tests.QuickCheckInverse

    Plugin.InversionPlugin
    Plugin.Prelude
    Plugin.BuiltIn
    Plugin.Effect.Monad
    Plugin.Effect.Annotation
  build-depends:
    inversion-ghc-plugin,
    process    ^>= 1.6.5.0,
    filepath   ^>= 1.4.2.1,
    directory  ^>= 1.3.3.0,
    Cabal      ^>= 3.2.0.0,
    QuickCheck ^>= 2.14.2
