cabal-version:       3.0
name:                sandbox
version:             0.2.0.0
license:             BSD-3-Clause
license-file:        LICENSE
copyright:           (c) 2020-2022, Finn Teegen, Kai-Oliver Prott, Niels Bunkenburg
author:              Finn Teegen, Kai-Oliver Prott, Niels Bunkenburg
maintainer:          fte@informatik.uni-kiel.de
build-type:          Simple

common deps
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  other-extensions:    NoImplicitPrelude
  build-depends:
    base             ^>=4.14.0.0,
    inversion-plugin -any,
    template-haskell -any

library
  import: deps
  exposed-modules:
    Arith
    FunPat
    Graph
    Huffman
    Interpreter
    Match
    Palindrome
    P
    RunLength
    TreeTraversal
    Z

executable main
  import:        deps
  main-is:       Main.hs
  build-depends:
    deepseq,
    containers,
    parallel,
    mini-egison,
    criterion
  other-modules:
    Conquer
    Divide
    Eden.Edi
    Eden.Merge
    Eden.EdenConcHs
    Eden.ParPrimConcHs
    Eden.Map
    Eden.MapReduce
    Eden.Auxiliary
    Z
  ghc-options:   -O2 -threaded -rtsopts -main-is Main
