cabal-version:       3.0
name:                sandbox
version:             0.2.0.0
license:             BSD-3-Clause
license-file:        LICENSE
copyright:           (c) 2020-2022, Finn Teegen, Kai-Oliver Prott, Niels Bunkenburg
author:              Finn Teegen, Kai-Oliver Prott, Niels Bunkenburg
maintainer:          fte@informatik.uni-kiel.de
build-type:          Simple

common deps
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  other-extensions:    NoImplicitPrelude
  build-depends:
    base             ^>=4.16.1.0,
    inversion-plugin -any,
    template-haskell -any,
    containers       -any,
    deepseq          -any,
    parallel         -any

library
   import: deps
   exposed-modules:
--      Test
--      Robert
--      TreeTraversal
--      P
--      Janus
--      JanusP
--      Typechecker

--     Arith
--     FunPat
--     FunPatSrc
--     Graph
--     Graph2
--     Huffman
--     Interpreter
--     Match
--     Palindrome
--     P
--     RunLength
--     TreeTraversal
--     Robert
--     Lambda
--     Quine
--     Lisp
--     Z

executable main
  import:        deps
  main-is:       Main.hs
  build-depends: sandbox
  other-modules:
    --P
    --Robert
    --FunPat
    --FunPatSrc
  ghc-options:   -O2 -threaded -rtsopts -main-is Main
